[Abhishek] - Added decrypt method .